# plugin-telemetry

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  UsageStatistic.json.in  plugin-telemetry.pro  usagestatistic.pro  usagestatisticconstants.h  usagestatisticplugin.h
common/: scopedsettingsgroupsetter.h  utils.h
datasources/: buildcountsource.h  buildsystemsource.cpp  examplesdatasource.cpp  kitsource.cpp  modeusagetimesource.h  qmldesignerusagetimesource.cpp  qtclicensesource.cpp  timeusagesourcebase.cpp  timeusagesourcebase.h
services/: datasubmitter.cpp  datasubmitter.h
src/: CMakeLists.txt  UsageStatistic.json.in  qdseventshandler.cpp  qdseventshandler.h  src.pro  usagestatistic.qrc  usagestatistic_global.h  usagestatisticconstants.h  usagestatisticplugin.cpp  usagestatisticplugin.h
src/common/: scopedsettingsgroupsetter.cpp  utils.h
src/datasources/: applicationsource.cpp  applicationsource.h  buildcountsource.cpp  buildcountsource.h  buildsystemsource.cpp  buildsystemsource.h  examplesdatasource.cpp  examplesdatasource.h  kitsource.cpp  kitsource.h  modeusagetimesource.cpp  modeusagetimesource.h  qmldesignerusageeventsource.cpp  qmldesignerusageeventsource.h  qmldesignerusagetimesource.cpp  qmldesignerusagetimesource.h  qtclicensesource.cpp  qtclicensesource.h  servicesource.cpp  servicesource.h  timeusagesourcebase.cpp  timeusagesourcebase.h
src/services/: datasubmitter.cpp  datasubmitter.h
src/ui/: FeedbackPopup.qml  encouragementwidget.h  encouragementwidget.ui  outputpane.cpp  usagestatisticpage.cpp  usagestatisticpage.h  usagestatisticsimplewidget.cpp  usagestatisticsimplewidget.h  usagestatisticsimplewidget.ui  usagestatisticwidget.cpp  usagestatisticwidget.h  usagestatisticwidget.ui
ui/: encouragementwidget.cpp  encouragementwidget.h  outputpane.cpp  outputpane.h  usagestatisticpage.cpp  usagestatisticwidget.cpp  usagestatisticwidget.h
